umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_cyclopropyl-chloride.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h2#v2" "C#h2#v2" "C#h#v3" "Cl#n3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 0 :single] [2 3 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h2#v2" "C#h2#v2" "C#h#v3" "Cl#n3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 0 :single] [2 3 :single]]}
    :success true}}
