umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_diazomethane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {:atoms ["C#h2#v2" "N#c+#v4" "N#c-#n2#v2"] :bonds [[0 1 "2"] [1 2 "2"]]}
    :success true}
  :counts {
    :output {:atoms ["C#h2#v2" "N#c+#v4" "N#c-#n2#v2"] :bonds [[0 1 "2"] [1 2 "2"]]}
    :success true}}
