umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_dimethyl-sulfoxide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h3#v" "S#n#v4" "C#h3#v" "O#n2#v2"] :bonds [[0 1 "1"] [1 2 "1"] [1 3 "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h3#v" "S#n#v4" "C#h3#v" "O#n2#v2"] :bonds [[0 1 "1"] [1 2 "1"] [1 3 "2"]] :charge 0 :spin "#u0 #s1"}}}
