umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_dimethylamine.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {:atoms ["C#h3#v" "C#h3#v" "N#h#n#v2"] :bonds [[0 2 "1"] [1 2 "1"]]}
    :success true}
  :counts {
    :output {:atoms ["C#h3#v" "C#h3#v" "N#h#n#v2"] :bonds [[0 2 "1"] [1 2 "1"]]}
    :success true}}
